# szkolenie_pyth_zaawansowane_20260415

./: .gitignore  pyproject.toml
coverage_data/: .coverage.michal-pc.pid17124.X4CVCmAx
reports/pytest/: report.html
resources/: emaile.txt  gmail.com.txt  o2.pl.txt  onet.pl.txt  towary.txt
scripts/: generuj_raporty.bat  generuj_raporty.ps1  generuj_raporty.sh  uruchom_pytest_html.ps1
src/: f_yield  funkcja_obiekt.py
src/moj_pakiet/: __init__.py  bledy.py  c1.py  c2.py  c2_gen_expr.py  c2_slowniki  c2_slowniki.py  c2_slowniki_obiektowo  c2_slowniki_obiektowo.py  c2_yield.py  c3.py  c3_defaultdict.py  c3_py  c3_reduce.py  c4.py  c4_klasa.py  c5.py  c6.py  c7.py  c8.py  c9.py  dekorator_funkcja_bez_p.py  dekorator_funkcja_z_p.py  dekorator_klasa_bez_p.py  dekorator_klasa_z_p.py  dekorator_klasy.py  dekoratory_idea.py  deskryptor_property.py  deskryptor_wlasny  deskryptor_wlasny.py  dziedziczenie.py  f_yield.py  funkcja_obiekt.py  funkcje.py  importowany.py  importujacy.py  kolekcje.py  liczby.py  listy_krotki.py  logiczne.py  (+17 more)
src/moj_pakiet/html/: przyklad_funkcja.html
src/moj_pakiet/pytest_przyklady/: README.md  __init__.py  do_testow_http.py  do_testow_pesel.py  do_testow_stdout.py  jak_dziala_pytest.md  mechanizmy_pytest.md  uruchamianie_pytest.md
tests/: test_przyklad_funkcja.py
tests/pytest_przyklady/: dane_pesel_fixture.json  test_magicmock.py  test_monkeypatch.py  test_pesel.py  test_pesel_fixture.py  test_stdout.py
